* BUG#7494 Wrong salary mode when computing salary range
* BUG#7105 Wrong salary range computation when salary is defined yearly
* OTH#0000 Change reference from service to delivered_service in get_currency
* BUG#6499 Salary range must be initialize based on the contract exit date
* FEA#6465 Allow to access TA, TB, TC salary range from coog-api 

Version 1.12 - 2017-04-28
* FEA#0000 Add salaries wizard which allows to enter salaries and compute net salaries
* FEA#0000 Fixed amount contributions are no longer related to salary ranges
* FEA#0000 Review rates per range retrieval method: add an optional rates list to be limited
* FEA#0000 Add tutorial on how to parameter coog to calculate net salary
* FEA#0000 Improve salary display
* FEA#0000 Review salary range calculation
* FEA#0000 Add last 4 quarters as salary mode
* FEA#0000 Handle annual salaries

Version 1.10 - 2016-11-02
* FEA#0000 Adding fixed rates for the net salary computing
* FEA#0000 Adding the sum of bonuses amount, gross salaries and net salaries in the footer
* FEA#0000 Net salary computing using the gross salary and french income brackets
* FEA#0000 Module creation