@@ -1,3 +1,4 @@
+* BUG#7495 Prise en compte de la règle de calcul du salaire net lors du calcul des taux par tranches
 * BUG#7494 Erreur dans le mode de salaire utilisé pour calculer les tranches de salaire
 * BUG#7105 Erreur dans le calcul des tranches de salaire si celui ci est déclaré annuellement
 * OTH#0000 Renommer le référence service au delivered_service dans get_currency
